plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'whatsinmypack'
version = '0.0.1-SNAPSHOT'
description = 'whats in my pack project'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation "org.springframework.boot:spring-boot-starter"
	//swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0' // 버전 업(스프링 버전 호환 이슈)

	compileOnly 'org.projectlombok:lombok'

	runtimeOnly 'org.postgresql:postgresql'
	runtimeOnly 'com.h2database:h2'

	annotationProcessor 'org.projectlombok:lombok'

	testImplementation "org.springframework.boot:spring-boot-starter-test"
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // JWT
    compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.3'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.3'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.3'

    // OAuth2.0 Client
    implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-client'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-oauth2-client-test'

    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    //AWS S3
    implementation 'software.amazon.awssdk:s3:2.20.26'
}


tasks.named('test') {
	useJUnitPlatform()
}
